# Synthext-dataset

./: .gitignore  README.md  pyproject.toml
synthetica/: __init__.py  generator.py  llm.py  models.py  prompts.py
tests/: test_basic.py  test_pipeline.py
